--- a/project.html
+++ b/project.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <p>ATRAPA EL RECTANGULO:</p>
+    <p>CLICKEA EL RECTANGULO Y NO FALLES!</p>
     <div id="area1">
         <span class="coords">?, ?</span>
     </div>
