Adding about & experience

--- a/projecte_clau_1.html
+++ b/projecte_clau_1.html
@@ -1,5 +1,110 @@
 <!DOCTYPE html>
-<html>
-    /*Inicio proyecto clave 1 de html*/
-    
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Curriculum Niels Sanchez</title>
+        <meta name="description" content="Curriculum Niels Sanchez">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+    </head>
+    <body>
+        <div id="intro">
+            <h1>Niels Sanchez van den Beuken</h1>
+            <h3>Senior HW Mechanical Engineer / Junior SW web Designer & Developer</h2>
+            <figure class="photo">
+                <img alt="Face foto" src="https://media-exp1.licdn.com/dms/image/C4E03AQFaeELqiiGxDw/profile-displayphoto-shrink_200_200/0?e=1588204800&v=beta&t=c6ViKdpkx5ohKFo_iyURBT_wa-wiJzNJd_d3gjAyow4">
+            </figure>
+        </div>
+        <!-- ABOUT -->
+        <section id="about">
+            <div class="container">
+                <div class="row">
+                    <p class="text-center">
+                        Proactive, creative and innovative, enthusiastic about science with a strong knowledge on engineering fundamentals and familiarised with working on critical programmes, in pressured-environments under tight deadlines. Highly motivated, open to new challenges, self-driven, flexible and solutions-maker.
+                    </p>
+                    <p class="text-center">
+                        Always customer-oriented, my strategic approach allows me to anticipate unexpected issues early in the programme therefore delivering on the time and budget committed.
+                    </p>
+                    <p class="text-center">
+                        Team leader who provides appreciation and willingness to suggestions from team-members and inspires them to deliver to the highest standards. 
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- EXPERIENCE -->
+        <section>
+            <h4 class="uppercase">Experience</h4>
+            <div class="container">
+                <div class="row">
+                    <div class="company">
+                        <h5 class="job-company">Hewlett Packard</h5>
+                        <div class="job">
+                            <p class="job-rank">
+                                Senior R&D Mechanical Engineer
+                            </p>
+                            <p class="job-time">
+                                nov 2019 - Current
+                            </p>
+                            <p class="job-description">
+                                -Leading a project team of other mechanical HW engineers to develop reliable, cost effective and high quality solutions <br>
+                                -Collaboration and communication with management / internal / outsourced development partners<br>
+                                -Design engineering solutions for mechanical hardware<br>
+                                -Develop and implementation parameters and test plans for new existing designs <br>
+                                -Mentor junior engineers <br>
+                            </p>
+                        </div>
+                        <div class="job">
+                            <p class="job-rank">
+                                Junior R&D Mechanical Engineer
+                            </p>
+                            <p class="job-time">
+                                may 2017 - nov 2019
+                            </p>
+                            <p class="job-description">
+                                -Design engineering solutions for mechanical hardware<br>
+                                -Develop and implementation parameters and test plans for new existing designs <br>
+                                -Do test and obtain value from it <br>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="company">
+                        <h5 class="job-company">Leitat</h5>
+                        <div class="job">
+                            <p class="job-rank">
+                                HP graduate program Inno+Talent25
+                            </p>
+                            <p class="job-time">
+                                may 2015 - may 2017
+                            </p>
+                            <p class="job-description">
+                                -Working as an R&D HW engineer in different hardware subsystems <br>
+                                -Develop new HW designs (Securing performance and fulfilling cost target)<br>
+                                -HW life test validation<br>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- EDUCATION -->
+        <section>
+
+        </section>
+        <!-- SKILLS -->
+        <section>
+
+        </section>
+        <!-- ACHIEVMENTS -->
+        <section>
+
+        </section>
+        <!-- PORTFOLIO -->
+        <section>
+
+        </section>
+    </body>
 </html>
