--- a/projecte_clau_1.html
+++ b/projecte_clau_1.html
@@ -12,12 +12,19 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <div class="header">
+            <header>
+                <!--ADD HEADER-->
+            </header>
+        </div>
         <div id="intro">
-            <h1>Niels Sanchez van den Beuken</h1>
-            <h3>Senior HW Mechanical Engineer / Junior SW web Designer & Developer</h2>
-            <figure class="photo">
-                <img alt="Face foto" src="https://media-exp1.licdn.com/dms/image/C4E03AQFaeELqiiGxDw/profile-displayphoto-shrink_200_200/0?e=1588204800&v=beta&t=c6ViKdpkx5ohKFo_iyURBT_wa-wiJzNJd_d3gjAyow4">
-            </figure>
+            <section>
+                <h1>Niels Sanchez van den Beuken</h1>
+                <h3>Senior HW Mechanical Engineer / Junior SW web Designer & Developer</h2>
+                <figure class="photo">
+                    <img alt="Face foto" src="https://media-exp1.licdn.com/dms/image/C4E03AQFaeELqiiGxDw/profile-displayphoto-shrink_200_200/0?e=1588204800&v=beta&t=c6ViKdpkx5ohKFo_iyURBT_wa-wiJzNJd_d3gjAyow4">
+                </figure>
+            </section>
         </div>
         <!-- ABOUT -->
         <section id="about">
@@ -33,6 +40,10 @@
                         Team leader who provides appreciation and willingness to suggestions from team-members and inspires them to deliver to the highest standards. 
                     </p>
                 </div>
+                <nav>
+                    <a href="https://www.linkedin.com/in/nielssanchez/">Linkedin</a>
+                    <a href="https://github.com/nielshub">github</a>
+                </nav>
             </div>
         </section>
         <!-- EXPERIENCE -->
@@ -106,5 +117,9 @@
         <section>
 
         </section>
+        <!-- FOOTER -->
+        <footer>
+
+        </footer>
     </body>
 </html>
