--- a/projecte_clau_1.html
+++ b/projecte_clau_1.html
@@ -78,6 +78,13 @@
             width: 50rem;
         }
 
+        #education {
+            padding: 0, 3rem;
+            border: solid rgba(187, 112, 15, 0.5);
+            border-width: 4px 0;
+            width: 50rem;
+        }
+
         .container {
             display: flex;
             flex-direction: column;
@@ -111,7 +118,7 @@
             border-color: cadetblue;
         }
         div .job-company{
-            background-color: rgb(28, 95, 97);
+            background-color: rgb(28, 95, 97, 0.7);
             flex-grow: 4;
         }
         div .job-company-text{
@@ -253,9 +260,66 @@
         </div>
     </section>
     <!-- EDUCATION -->
-    <h4 class="uppercase">Education</h4>
     <section>
-
+        <h4 class="uppercase">Education</h4>
+        <div class="container">
+            <div id="education">
+                <table>
+                    <tr>
+                        <td>
+                            <a>
+                                <img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFU2wWz9yf9eA/company-logo_100_100/0?e=1590624000&v=beta&t=SYqRnZCLwSHCOJZf5IobFphlJnlXsVL91ZIWNgP5RAg"  alt="upc"  >                       
+                            </a>  
+                        </td>
+                        <td>
+                            <p>
+                                Postgraduate in FullStack web developer. UPC tech school.<br>
+                                2020-current
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a>
+                                <img src="https://media-exp1.licdn.com/dms/image/C4E0BAQGYpMm6kW-JEw/company-logo_100_100/0?e=1590624000&v=beta&t=YeW3sEJx97DRasDcOW5N6i9KA2lKQOPIG9yI0hBE8pY" alt="puntero">
+                            </a>  
+                        </td>
+                        <td>
+                            <p>
+                                Master in project management. La Salle BCN.<br>
+                                2015-2017
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a>
+                                <img src=https://media-exp1.licdn.com/dms/image/C4E0BAQGtWZ9p-TYD0Q/company-logo_100_100/0?e=1590624000&v=beta&t=j3QCdznhdZlMg13jA-PZ22N66Z_6NCfqCR1gEcmT9Ew alt="puntero">
+                            </a>  
+                        </td>
+                        <td>
+                            <p>
+                                Master's thesis in navigation systems for airplanes in the Institut für Luftfahrtsysteme.<br>
+                                2014-2015
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a>
+                                <img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFU2wWz9yf9eA/company-logo_100_100/0?e=1590624000&v=beta&t=SYqRnZCLwSHCOJZf5IobFphlJnlXsVL91ZIWNgP5RAg"  alt="upc"  >                       
+                            </a>  
+                        </td>
+                        <td>
+                            <p>
+                                Master's degree in aeronautical engineering in the UPC.<br>
+                                2009-2014
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </section>
     <!-- SKILLS -->
     <section>
