--- a/projecte_clau_1.html
+++ b/projecte_clau_1.html
@@ -12,7 +12,7 @@
     <title>Curriculum Niels Sanchez</title>
     <meta name="description" content="Curriculum Niels Sanchez">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style1.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="jquery.scrollUp.js"></script>
     <script>
@@ -32,178 +32,19 @@
         scrollImg: true,            // Set true to use image
         activeOverlay: false,        // Set CSS color to display scrollUp active point, e.g '#00FFFF'
         zIndex: 2147483647           // Z-Index for the overlay
+        });
     });
-});
     </script>
-    <style>
-        #scrollUp {
-        bottom: 20px;
-        right: 20px;
-        width: 50px;
-        height: 50px;
-        background: url("up.PNG");
-        background-size: cover;
-        border-radius: 50%;
-        }
-        #intro {
-            text-align: center;
-            background-color: slategray;
-        }
-
-        #bloquephoto {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        h1,
-        h3 {
-            font-family: sans-serif;
-            font-size: 3rem;
-            color: whitesmoke;
-        }
-
-        div h3 {
-            font-size: 2rem;
-        }
-
-        h4 {
-            font-family: sans-serif;
-            font-size: 2rem;
-            color: rgb(0, 0, 0);
-            text-align: center;
-        }
-
-        h5 {
-            font-size: 1rem;
-        }
-
-        .text-center {
-            text-align: justify;
-        }
-
-        div {
-            padding: 0.2rem;
-            border: 0px solid #ccc;
-            font-family: sans-serif;
-        }
-
-        section {
-            padding: 0.3rem;
-            border: 0px solid rgb(12, 11, 11);
-        }
-
-        #about {
-            width: 50rem;
-            height: 12rem;
-            padding: 0, 3rem;
-            border: solid rgba(69, 105, 160, 0.5);
-            border-width: 4px 0;
-        }
-
-        #experience {
-            padding: 0, 3rem;
-            border: solid rgba(11, 145, 82, 0.5);
-            border-width: 4px 0;
-            width: 50rem;
-        }
-
-        #education {
-            padding: 0, 3rem;
-            border: solid rgba(187, 112, 15, 0.5);
-            border-width: 4px 0;
-            width: 50rem;
-        }
-
-        #skills {
-            padding: 0, 3rem;
-            border: solid steelblue;
-            border-width: 4px 0;
-            width: 50rem;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-        }
-
-        #photo {
-            display: block;
-            height: 15rem;
-            width: 15rem;
-            background-repeat: no-repeat;
-            background-position: 50%;
-            border-radius: 50%;
-            background-size: 100% auto;
-        }
-
-        .smallphoto {
-            height: 3rem;
-            width: 3rem;
-            background-repeat: no-repeat;
-            background-size: 100% auto;
-        }
-
-        #links {
-            padding: 1rem;
-        }
-
-        .job {
-            border-left-width: 4px;
-            border-color: cadetblue;
-        }
-        div .job-company{
-            background-color: rgb(28, 95, 97, 0.7);
-            flex-grow: 4;
-            border-radius: 1rem;
-        }
-        div .job-company-text{
-            color: cornsilk;
-            font-size: 1.4rem;
-        }
-        .divsmallphoto{
-            width: 7rem;
-        }
-        .container-row{
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-start;
-            align-items: stretch; 
-            height: 4rem;
-        }
-        .click{
-            background: #eee;
-        }
-        a[href]{
-            text-decoration: none;
-            display: block;
-            background:#ddd;
-            line-height: 5 rem;
-            padding: 1rem 1rem 1rem 1.5rem;
-            color: steelblue;
-            font-weight: bold;
-        }
-        .sections{
-            margin: 0rem 3rem;
-            display: none;
-        }
-        .sections:target{
-            display: block;
-        }
-        footer{
-            background-color: slategray;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="header">
         <header>
             <!--ADD HEADER-->
+            <nav id="links">
+                <a style = "display:inline;background-color: slategray; font-family: monospace; color: whitesmoke;" href="#style1">Style 1</a>
+                <a style = "display:inline;background-color: slategray; font-family: monospace; color: whitesmoke;" href="#style2">Style 2</a>
+            </nav>
         </header>
-    </div>
     <div id="intro">
         <section>
             <div>
