--- a/Proyecto 2/Proyecto2.html
+++ b/Proyecto 2/Proyecto2.html
@@ -62,6 +62,10 @@
           flex-direction: row;
           justify-content: space-around;
       }
+      #legend{
+        text-align: center;
+        border: 0.5px solid black;
+      }
     </style>
   </head>
   <body>
@@ -83,7 +87,14 @@
       <div><h1>POKER GAME</h1></div>
       <div>
         <div>
-          <p>1->High Card/2->Pair/3->Double Pair/4->Trio/5->Ladder/6->Ladder/7->Full/8->Poker</p>
+          <table id="legend">
+            <tr>
+              <td>Hand</td><td>High Card</td><td>Pair</td><td>Double Pair</td><td>Trio</td><td>Ladder</td><td>Color</td><td>Full</td><td>Poker</td>
+            </tr>
+            <tr>
+              <td>Value</td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
